fix: partners wrap

--- a/styles.css
+++ b/styles.css
@@ -149,10 +149,10 @@ html {
     display: flex;
     flex-wrap: wrap;
     margin: 2rem auto;
-    width: 60%;
+    width: 80%;
     justify-content: space-evenly;
     list-style-type: none;
-    gap: 4rem;
+    gap: 1rem;
 }
 .hero-section.second a {
     background: linear-gradient(0, var(--color-primary200) 50%, var(--color-neutral100) 50%);
